--- a/waybar/waybar.org
+++ b/waybar/waybar.org
@@ -104,7 +104,7 @@ Configuration for the "hyprland/workspaces" module
                "2": "",
                "3": "",
                "4": "",
-               "5": "",
+               "5": "󰙯",
                "6": "",
                "urgent": "",
                "focused": "",
@@ -622,6 +622,7 @@ battery module styling
 #+author:Henry Davies (HD)
 #+Startup: showeverything inlineimages
 #+Options: num:nil
+#+auto_tangle: t
 #+exclude_tags: noexport
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 #+export_file_name: ~/Documents/html/system/waybar.html
