Updated Hyprland config to fix issues with keybindings not properly launching the emacsclient.

--- a/emacs/README.org
+++ b/emacs/README.org
@@ -55,6 +55,9 @@
 - [[#footnotes][FOOTNOTES]]
 
 * ABOUT THIS CONFIG
+
+[[./images/emacs-org.png]] 
+
 This is my personal /GNU Emacs/ literate configuration. I will do my best to clarify what external dependencies are required for this emacs config. However, the external dependency list may not be complete, and I may have made other undocumented changes to my system. Therefor I would *NOT* recommend blindly copying this config. Instead, i would suggest reading though this config, and copying/reimplimenting only those sections which are reivant to your own personal emacs config.
 
 My personal emacs config has been inspired by many factors, and it would be to difficult to enumerate all such factors. Therefor, I will Instead list bellow what i have deemed to be the foundational influences to my personal emacs config.
