--- a/waybar/waybar.org
+++ b/waybar/waybar.org
@@ -187,8 +187,8 @@ Configuration for the network module
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}",
-	"on-click": "nmtui-connect"
+        //"format-alt": "{ifname}: {ipaddr}/{cidr}",
+	"on-click": "kitty -e nmtui"
     },
 #+end_src
 
