--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -138,8 +138,10 @@ Run my bluelight script which sets a =hyprsunset= value.
 exec-once = ~/dotfiles/hypr/scripts/blue-light
 #+end_src
 
-Normal this script would run once an hour via =cron=; however, at times I will login to my sistem inbetween one of these hourly checks. Therefor it is necessary to run the =bluelight= once upon login to proper set the =hyprsunset= value at /Hyprland/ startup.
+Normaly this script would run once an hour via =cron=; however, at times I will login to my sistem inbetween one of these hourly checks. Therefor it is necessary to run the =bluelight= script once upon login to properly set the =hyprsunset= value at /Hyprland/ startup.
 
+**** Greyscale Script 
+Normaly this script would run once an hour via =cron=; however, at times I will login to my sistem inbetween one of these hourly checks. Therefor it is necessary to run the =greyscale= script once upon login to properly set the shader values at /Hyprland/ startup.
 *** User applications
 **** Emacs
 Start the Emacs daemon, and Emacs client upon user login
