--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -141,6 +141,11 @@ exec-once = ~/dotfiles/hypr/scripts/blue-light
 Normaly this script would run once an hour via =cron=; however, at times I will login to my sistem inbetween one of these hourly checks. Therefor it is necessary to run the =bluelight= script once upon login to properly set the =hyprsunset= value at /Hyprland/ startup.
 
 **** Greyscale Script 
+Run my greyscale script which enables/disables a shader for Hyprland.
+ #+begin_src conf :tangle hyprland.conf
+exec-once = ~/dotfiles/hypr/scripts/schedule-shaders.sh
+#+end_src
+
 Normaly this script would run once an hour via =cron=; however, at times I will login to my sistem inbetween one of these hourly checks. Therefor it is necessary to run the =greyscale= script once upon login to properly set the shader values at /Hyprland/ startup.
 *** User applications
 **** Emacs
