--- a/hypr/hyprland.org
+++ b/hypr/hyprland.org
@@ -474,7 +474,7 @@ Enable rounding of window corners
 **** Shaders
 Enable a screen shader based on the provided shadder file. In this case the provided file is a shader file which enables a greyscale effect. 
 #+begin_src conf :tangle hyprland.conf
-     ##screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
+     #screen_shader = ~/.config/hypr/scripts/greyscale-shader.glsl
 #+end_src
 
 bellow is an example of this shader in action:
@@ -502,13 +502,21 @@ Configure blur and drop shadow. These settings are currently disabled; though i 
 #+end_src
 
 **** Group Decorations
+Decorations for when windows are grouped together.
 #+begin_src conf :tangle hyprland.conf
-group {
-    groupbar {
-        col.active = rgb(bd93f9) rgb(44475a) 90deg
-        col.inactive = rgba(282a36dd)
-    }
-}
+  group {
+        col.border_active = rgba(bd93f9ff) rgba(ff79c6ff) rgba(ffb86caa) rgba(8be9fdaa) 45deg
+      groupbar {
+          enabled = true
+          gradients = true
+          font_size = 16
+          font_family = JetBrains Mono
+          height = 24
+          text_color = rgba(f8f8f2ff) #white
+          col.active = rgb(bd93f9) rgb(44475a) 90deg
+          col.inactive = rgba(282a36dd)
+      }
+  }
 #+end_src
 
 **** Backup decoration settings 
@@ -550,7 +558,7 @@ darker alternative
 #+begin_src conf 
 col.active_border = rgb(44475a) # or rgb(6272a4)
 col.inactive_border = rgb(282a36)
-col.group_border = rgb(282a36)
+col.group_border = rgb(bd93f9)
 col.group_border_active = rgb(44475a) # or rgb(6272a4)
 #+end_src
 
