--- a/nwg-wrapper/bindings.org
+++ b/nwg-wrapper/bindings.org
@@ -24,8 +24,9 @@ This section includes the main heading to be displayed in NWG-Wrapper
 #+begin_src html :tangle ~/dotfiles/nwg-wrapper/bindings.pango
 <span size="x-large" foreground="#50fa7b" face="serif">Hyprland</span>
 
-Web browser		<span foreground="#6699cc" face="serif">Mod+B</span>
-Toggle floating		<span foreground="#6699cc" face="serif">Mod+V</span>
+Web browser		<span foreground="#8be9fd" face="serif">Mod+B</span>
+Toggle Grouping		<span foreground="#8be9fd" face="serif">Mod+G</span>
+Toggle floating		<span foreground="#8be9fd" face="serif">Mod+V</span>
 
 #+end_src
 
