--- a/waybar/waybar.org
+++ b/waybar/waybar.org
@@ -20,8 +20,7 @@ Personal Dracula theme for /Waybar/.
 
 
 #+begin_src jsonc :tangle ~/dotfiles/waybar/config.jsonc
-[
-  {
+{
 #+end_src
 ** Waybar Position
 Define the location, width, and hieght of /Waybar/
@@ -70,7 +69,7 @@ Select the modules to show on the right portion of /Waybar/
         "power-profiles-daemon",
         "battery"
     ],
-#+end_src{
+#+end_src
 
 ** Module Definition
 This section will include the module configuration for each module included in the /Module Declation/ section. 
@@ -357,22 +356,23 @@ This file defines all the colors I will use to style /Waybar/
 ** [[./style.css][Style.css]]
 This file uses the colors from [[./colors.css][colors.css]] to style the modules of /Waybar/ to whatever look I want. 
 
+*** Import colors from =colors.css=
 Before I can style anything in the [[./style.css][style.css]] file; I need to imprt the pre-difined colors from [[./colors.css][colors.css]]  
-#+begin_src css :tangle style-test.css
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
 @import url("./colors.css");
 #+end_src
 
 *** Global Styling
 Set the font, and font size globally
-#+begin_src css :tangle ~/dotfiles/waybar/style-test.csss
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
  * {
     font-family: 'Noto Sans Mono', 'Font Awesome 6 Free', 'Font Awesome 6 Brands', monospace;
     font-size: 13px;
 }
 #+end_src
 
-**** Window Styling
-#+begin_src css :tangle ~/dotfiles/waybar/style-test.csss
+**** Window
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
 window#waybar {
     background-color: @background-darker;
     border-bottom: 3px solid @background;
@@ -386,7 +386,7 @@ window#waybar.hidden {
 }
 #+end_src
 
-**** Button Styling
+**** Button
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
 button {
     /* Use box-shadow instead of border so the text isn't offset */
@@ -402,231 +402,358 @@ button:hover {
     box-shadow: inset 0 -3px @pink;
 }
 #+end_src
+
 *** Module Styling
-**** Modules Left
-Clock module styling
+**** Hover Rules
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#clock {
-    background-color: @background;
-    color: @green;
-}
+    #pulseaudio:hover {
+        background-color: @yellow;
+    }
+
+    #network:hover {
+        background-color: @yellow;
+        padding: 1px 3px;
+    }
+    /* #workspaces button {
+        padding: 0 5px;
+        background-color: transparent;
+        color: @foreground;
+    }*/
+
 #+end_src
 
-Tray module styling
+**** Mode 
+styling for submodes like window resizing or screenshot menus. I don't use this on Hyprland, but do on SwayWM.
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#tray {
-    background-color: @background;
-}
 
-#tray > .passive {
-    -gtk-icon-effect: dim;
-}
 
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: @red;
-}
+    #mode {
+        background-color: @comment;
+        box-shadow: inset 0 -3px #ffffff;
+    }
+
+
+    #cpu,
+    #memory,
+    #pulseaudio,
+    #wireplumber,
+    #idle_inhibitor,
+    #power-profiles-daemon,
+    #mpd {
+        padding: 0 10px;
+        color: #ffffff;
+    }
+
+    #window,
 #+end_src
 
-"hyprland/workspaces" module styling
+**** Workspaces
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#workspaces {
-    margin: 0 4px;
-    color: @foreground;
-}
+    #workspaces {
+        margin: 0 4px;
+        color: @foreground;
+    }
 
-#workspaces button.active {
-    background-color: @background;
-    color: @forground;
-    box-shadow: inset 0 -3px @purple;
-} 
-#workspaces button:hover {
-    background: @selection;
-    color: @forground;
-    box-shadow: inset 0 -3px @yellow
-}
+    #workspaces button.active {
+        background-color: @background;
+        color: @forground;
+        box-shadow: inset 0 -3px @purple;
+    } 
+    #workspaces button:hover {
+        background: @selection;
+        color: @forground;
+        box-shadow: inset 0 -3px @yellow
+    }
 
-#workspaces button.focused {
-    background-color: @purple;
-    box-shadow: inset 0 -3px #ffffff;
-}
+    #workspaces button.focused {
+        background-color: @purple;
+        box-shadow: inset 0 -3px #ffffff;
+    }
 
 
-#workspaces button.urgent {
-    background-color: @red;
-}
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
+    #workspaces button.urgent {
+        background-color: @red;
+    }
+    /* If workspaces is the leftmost module, omit left margin */
+    .modules-left > widget:first-child > #workspaces {
+        margin-left: 0;
+    }
 
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
+    /* If workspaces is the rightmost module, omit right margin */
+    .modules-right > widget:last-child > #workspaces {
+        margin-right: 0;
+    }
+
 #+end_src
 
-"custom/media" module styling
+**** Clock
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#custom-media {
-    background-color: @background-darker;
-    color: #fff0f5;
-    min-width: 50px;
-    border-bottom: 3px solid @purple;
-    padding: 1px 3px;
-}
-
-#custom-media.custom-spotify {
-    background-color: @background;
-    color: @green;
-    padding: 1px 3px;
-}
-
-#custom-media.custom-vlc {
-    color: #ffa000;
-    padding: 1px 3px;
-}
-
-#custom-media.custom-mpv {
-    color: @purple;
-    padding: 1px 3px;
-}
+    #clock {
+        padding: 1px 8px;
+        background-color: @background;
+        color: @green;
+    }
 #+end_src
 
-**** Modules Center
-
-"hyprland/window" module styling
-**** Modules Right
-***** I/O
-idle_inhibitor module styling
+**** Battery
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#idle_inhibitor {
-    background-color: @selection;
-}
-
-#idle_inhibitor.activated {
-    background-color: @foreground;
-    color: @selection;
-}
-#+end_src
-
-backlight module styling
-#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#backlight {
-    color: @yellow;
-    background-color: @background-darker;
-    padding: 1px 3px;
-}
-
-#backlight:hover {
-    color: @background-darker;
-    background-color: @yellow;
-    padding: 1px 3px;
-}
-#+end_src
-
-pulseaudio module styling
-#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#pulseaudio {
-    background-color: @comment;
-    color: @background;
-    padding: 1px 3px;
-}
-#+end_src
-
-#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#pulseaudio.muted {
-    background-color: @red;
-    color: @background-darker;
-    padding: 1px 3px;
-}
-#+end_src
-
-#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#pulseaudio:hover {
-    background-color: @yellow;
-}
-#+end_src
-
-network module styling
-#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-  #network {
-      background-color: @purple;
-      color: @background-darker; 
-      padding: 1px 3px;
+  #battery {
+      background-color: @cyan;
+      color: @background-darker;
+      padding: 1px 10px;
   }
-#+end_src
 
-Change the background color of the network module to a more noticable #ff5555 (@red), when disconnected from a network. 
-#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-  #network.disconnected {
+  #battery.charging, #battery.plugged {
+      color: @background-darker;
+      background-color: @green;
+  }
+
+  @keyframes blink {
+      to {
+          background-color: #ffffff;
+          color: #000000;
+      }
+  }
+
+  /* Using steps() instead of linear as a timing function to limit cpu usage */
+  #battery.critical:not(.charging) {
       background-color: @red;
-      padding: 1px 3px;
+      color: #ffffff;
+      animation-name: blink;
+      animation-duration: 0.5s;
+      animation-timing-function: steps(12);
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+  }
+
+  #power-profiles-daemon {
+      padding-right: 15px;
+  }
+
+  #power-profiles-daemon.performance {
+      background-color: @red;
+      color: @background-darker;
+  }
+
+  #power-profiles-daemon.balanced {
+      background-color: @comment;
+      color: #ffffff;
+  }
+
+  #power-profiles-daemon.power-saver {
+      background-color: @green;
+      color: @background-darker;
+  }
+
+  label:focus {
+      background-color: #000000;
   }
 #+end_src
 
-Change the background color of the network module to a more noticable #f1fa8c (@yellow), when hovering over the network module. 
+**** CPU
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-  #network:hover {
-      background-color: @yellow;
-      padding: 1px 3px;
-  }
+    #cpu {
+        background-color: @background-darker;
+        color: @green;
+    }
+
+    #cpu:hover {
+        background-color: @green;
+        color: @background-darker;
+    }
 #+end_src
 
-***** Monitoring
-temperature module styling
+**** Memory
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#temperature {
-    color: @orange;
-    background-color: @background-darker;
-    padding: 1px 3px;
-}
-#temperature:hover {
-    background-color: @orange;
-    color: @background-darker;
-    padding: 1px 3px;
-}
+    #memory {
+        background-color: @background-darker;
+        color: @purple;
+    }
 
-#temperature.critical {
-    color: @red;
-    background-color: @background-darker;
-    padding: 1px 3px;
-}
+    #memory:hover {
+        background-color: @purple;
+        color: @background-darker;
+    
+    }
 
-#temperature.critical:hover {
-    background-color: @red;
-    color: @background-darker;
-}
+    #disk {
+        background-color: @background-color;
+        color: @purple;
+    }
+
+    #disk:hover {
+        background-color: @purple;
+        color: @background-darker;
+    
+    }
 #+end_src
 
-battery module styling
+**** Backlight
 #+begin_src css :tangle ~/dotfiles/waybar/style-test.css
-#battery {
-    background-color: @cyan;
-    color: @background-darker;
-}
+    #backlight {
+        color: @yellow;
+        background-color: @background-darker;
+        padding: 1px 3px;
+    }
 
-#battery.charging, #battery.plugged {
-    color: @background-darker;
-    background-color: @green;
-}
+    #backlight:hover {
+        color: @background-darker;
+        background-color: @yellow;
+        padding: 1px 3px;
+    }
+#+end_src
 
-@keyframes blink {
-    to {
-        background-color: #ffffff;
+**** Network
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
+    #network {
+        background-color: @purple;
+        color: @background-darker; 
+        padding: 1px 3px;
+    }
+
+    #network.disconnected {
+        background-color: @red;
+        padding: 1px 3px;
+    }
+#+end_src
+
+**** Audio
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
+    #pulseaudio {
+        background-color: @comment;
+        color: @background;
+        padding: 1px 3px;
+    }
+
+    #pulseaudio.muted {
+        background-color: @red;
+        color: @background-darker;
+        padding: 1px 3px;
+    }
+
+    #wireplumber {
+        background-color: #fff0f5;
         color: #000000;
     }
-}
-#battery.critical:not(.charging) {
-    background-color: @red;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(12);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
 
+    #wireplumber.muted {
+        background-color: #f53c3c;
+    }
+#+end_src
+
+**** Custom Modules
+***** Media
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
+    #custom-media {
+        background-color: @background-darker;
+        color: #fff0f5;
+        min-width: 50px;
+        border-bottom: 3px solid @purple;
+        padding: 1px 3px;
+    }
+
+    #custom-media.custom-spotify {
+        background-color: @background;
+        color: @green;
+        padding: 1px 3px;
+    }
+
+    #custom-media.custom-vlc {
+        color: #ffa000;
+        padding: 1px 3px;
+    }
+
+    #custom-media.custom-mpv {
+        color: @purple;
+        padding: 1px 3px;
+    }
+#+end_src
+
+***** Rofi
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
+     #custom-rofi {
+        background-color: @background;
+        color: #fff0f5;
+        padding: 1px 6px;
+    }
+#+end_src
+**** Temperature
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
+    #temperature {
+        color: @orange;
+        background-color: @background-darker;
+        padding: 1px 3px;
+    }
+    #temperature:hover {
+        background-color: @orange;
+        color: @background-darker;
+        padding: 1px 3px;
+    }
+
+    #temperature.critical {
+        color: @red;
+        background-color: @background-darker;
+        padding: 1px 3px;
+    }
+
+    #temperature.critical:hover {
+        background-color: @red;
+        color: @background-darker;
+    }
+#+end_src
+
+**** Tray 
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
+  #tray {
+      background-color: @background;
+      padding: 1px 6px;
+  }
+
+  #tray > .passive {
+      -gtk-icon-effect: dim;
+  }
+
+  #tray > .needs-attention {
+      -gtk-icon-effect: highlight;
+      background-color: @red;
+  }
+#+end_src
+
+**** Idle Inhibitor
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
+    #idle_inhibitor {
+        background-color: @selection;
+    }
+
+    #idle_inhibitor.activated {
+        background-color: @foreground;
+        color: @selection;
+    }
+
+#+end_src
+
+**** Privacy
+#+begin_src css :tangle ~/dotfiles/waybar/style-test.css
+    #privacy {
+        padding: 0;
+    }
+
+    #privacy-item {
+        padding: 0 5px;
+        color: white;
+    }
+
+    #privacy-item.screenshare {
+        background-color: #cf5700;
+    }
+
+    #privacy-item.audio-in {
+        background-color: #1ca000;
+    }
+
+    #privacy-item.audio-out {
+        background-color: #0069d4;
+    }
 #+end_src
 * FOOTNOTES
 #+startup: inlineimages
