fix un-needed export of metadata headline

--- a/emacs/README.org
+++ b/emacs/README.org
@@ -1046,12 +1046,13 @@ Visit /scratch/ buffer from custom startpage
 #+exclude_tags: noexport
 #+Options: num:nil noexport
 
-* HTML Export Control :noexport:
+** HTML Export Control                                            :noexport:
+Section containing tags pertaining to how this document shoud be formatted when exporting to HTML. 
 #+export_file_name: ~/Documents/html/system/emacs.html
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
-specify the background color, and font color fo source code blocks
+1. specify the background color, and font color fo source code blocks
 #+HTML_HEAD: <style>pre.src{background:#282a36;color:white;} </style>
 
-Specify the background color of code blocks. In my case these somewhat interchangable with regualar quotes, as most of the extensive code is placed in source code blocks. 
+2. Specify the background color of code blocks. In my case these somewhat interchangable with regualar quotes, as most of the extensive code is placed in source code blocks. 
 #+HTML_HEAD: <style>code{background:#f8f8f2;color:#6272a4;} </style>
 #+HTML_HEAD: <style>ul{background:#f8f8f2;} </style>
